clusters/cosmos/apps/netalertx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: netalertx-ingress
spec:
 tls:
 - hosts:
   - netalertx.cosmos.cboxlab.com
   secretName: netalertx-cert
 rules:
 - host: netalertx.cosmos.cboxlab.com
   http:
     paths:
     - backend:
         service:
           name: netalertx
           port:
             name: http
       path: /
       pathType: Prefix
